fix: horizontal scroll on header + footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,14 @@ p {
 	transform: translate(-50%, -50%);
 }
 
+.feature--coming-soon .feature__image {
+	filter: brightness(0.6);
+}
+
+.feature--coming-soon .feature__link {
+	cursor: default;
+}
+
 .feature--coming-soon .feature__link-text::after {
 	content: 'Coming Soon';
 	margin-left: 1rem;
@@ -230,6 +238,10 @@ p {
 		opacity: 0;
 		transition: opacity 0.3s;
 		color: white;
+	}
+
+	.feature--coming-soon .feature__image {
+		filter: brightness(1);
 	}
 
 	.feature--coming-soon .feature__link-icon {
@@ -351,7 +363,7 @@ p {
 .header {
 	position: sticky;
 	top: 0;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	z-index: 100;
@@ -386,7 +398,7 @@ p {
 /* Footer */
 .footer {
 	box-sizing: border-box;
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -433,6 +445,7 @@ p {
 /* Container */
 .container {
 	max-width: 1400px;
+	box-sizing: border-box;
 }
 
 /* Hero */
